# ACADOS_Example

./: .gitignore  condensing_explanation.md  ocp_qp_matrices_and_scaling.md
decision_lt_traj/: decision_lt_acados_ocp.json  decision_lt_traj.py
decision_lt_traj/c_generated_code/: Makefile  acados_sim_solver_decision_lt.c  acados_sim_solver_decision_lt.h  acados_solver.pxd  acados_solver_decision_lt.c  acados_solver_decision_lt.h  main_decision_lt.c  main_sim_decision_lt.c
decision_lt_traj/c_generated_code/decision_lt_model/: decision_lt_expl_ode_fun.c  decision_lt_expl_vde_adj.c  decision_lt_expl_vde_forw.c  decision_lt_model.h
esa_mpc/: esa_mpc.py
esa_mpc_ocp/: esa_mpc_ocp.py  esa_mpc_ocp_acados_ocp.json
esa_mpc_ocp/acados_models/c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver_esa_mpc_ocp.h  acados_solver_esa_mpc_ocp.c  main_esa_mpc_ocp  main_esa_mpc_ocp.c  main_esa_mpc_ocp.cpp  main_esa_mpc_ocp_c  main_sim_esa_mpc_ocp.c
esa_mpc_ocp/acados_models/c_generated_code/esa_mpc_ocp_model/: esa_mpc_ocp_expl_vde_adj.c  esa_mpc_ocp_expl_vde_forw.c  esa_mpc_ocp_model.h
esa_mpc_ocp/c_generated_code/: Makefile  acados_sim_solver_esa_mpc_ocp.c  acados_solver.pxd  acados_solver_esa_mpc_ocp.c  acados_solver_esa_mpc_ocp.h  main_esa_mpc_ocp.c
esa_mpc_ocp/c_generated_code/esa_mpc_ocp_model/: esa_mpc_ocp_expl_ode_fun.c
esa_mpc_ocp/docs/: kkt_derivation.md
frenet/: Frenet_Opt_Problem_Formulation.py  acados_ocp.json
frenet/c_generated_code/: Makefile  acados_sim_solver_improved_frenet.c  acados_sim_solver_improved_frenet.h  acados_solver.pxd  acados_solver_improved_frenet.c  acados_solver_improved_frenet.h  main_improved_frenet.c  main_sim_improved_frenet.c
frenet/c_generated_code/improved_frenet_model/: improved_frenet_expl_ode_fun.c  improved_frenet_expl_vde_adj.c  improved_frenet_expl_vde_forw.c  improved_frenet_model.h
frenet_lt_traj/: frenet_lt_acados_ocp.json  frenet_lt_traj.py  setup.bash
frenet_lt_traj/c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver_frenet_lt.c  acados_sim_solver_frenet_lt.h  acados_solver.pxd  acados_solver_frenet_lt.c  acados_solver_frenet_lt.h  main_frenet_lt.c  main_sim_frenet_lt.c
frenet_lt_traj/c_generated_code/frenet_lt_model/: frenet_lt_expl_ode_fun.c  frenet_lt_expl_vde_adj.c  frenet_lt_expl_vde_forw.c  frenet_lt_model.h
lon_pwj/: lon_pwj.py
python/: mobile_robot_acados_ocp.json  mobile_robot_model.py  mobile_robot_opt.py
python/c_generated_code/: Makefile  acados_sim_solver_mobile_robot.c  acados_sim_solver_mobile_robot.h  acados_solver.pxd  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h  main_mobile_robot.c
python/c_generated_code/mobile_robot_model/: mobile_robot_expl_ode_fun.c  mobile_robot_expl_vde_adj.c  mobile_robot_expl_vde_forw.c
spline/: draw_dynamic_points.py  refline.py  spline2d.py  spline_ocp_acados_ocp.json  spline_ocp_model.py  spline_ocp_opt.py  vec2d.py
spline/c_generated_code/: Makefile  acados_sim_solver_spline_ocp.c  acados_sim_solver_spline_ocp.h  acados_solver.pxd  acados_solver_spline_ocp.c  acados_solver_spline_ocp.h  main_sim_spline_ocp.c  main_spline_ocp.c
spline/c_generated_code/spline_ocp_model/: spline_ocp_expl_ode_fun.c  spline_ocp_expl_vde_adj.c  spline_ocp_expl_vde_forw.c  spline_ocp_model.h
